--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
   </main>
 
   <script>
+    var timer;
+
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
       e.preventDefault();
@@ -117,34 +119,43 @@
           console.warn('Using "Console Warn"');
           break;
         case 'Assert':
-          console.assert('Using "Console Assert"');
+          console.assert(false, 'Using "Console Assert"');
           break;
         case 'Clear':
           console.clear('Using "Console Clear"');
           break;
         case 'Dir':
-          console.dir('Using "Console Dir"');
+          console.dir(document.querySelector("fieldset"));
           break;
         case 'dirxml':
-          console.dirxml('Using "Console dirxml"');
+          console.dirxml(document.querySelector("fieldset"));
           break;
         case 'Group Start':
-          console.group('Using "Group Group Start"');
+          console.log('Using "Group Group Start"');
+          console.group();
           break;
         case 'Group End':
-          console.groupEnd('Using "Console Group End"');
+          console.log('Using "Console Group End"')
+          console.groupEnd();
           break;
         case 'Table':
-          console.table('Using "Console Table"');
+          console.table(["apples", "oranges", "bananas"]);
           break;
         case 'Start Timer':
-          console.time('Using "Console Start Timer"');
+          console.time(timer);
           break;
         case 'End Timer':
-          console.timeEnd('Using "Console End Timer"');
+          console.timeEnd(timer);
           break;
         case 'Trace':
-          console.trace('Using "Console Trace"');
+          function foo() {
+            function bar() {
+              console.trace();
+            }
+            bar();
+          }
+
+          foo();
           break;
         case 'Global Error':
           console.log('Causing a "Global Error"');
