--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           console.clear('Using "Console Clear"');
           break;
         case 'Dir':
-          console.dir(document.querySelector("fieldset"));
+          console.dir(document.location);
           break;
         case 'dirxml':
           console.dirxml(document.querySelector("fieldset"));
